# weather-aware-assistant

./: .gitignore  README.md  calendar.json  pyproject.toml  requirements.txt  run.py
docs/: rules.md
specs/: PRD.md
tests/: helpers.py  test_advisor.py  test_architecture.py  test_briefing.py  test_calendar_loader.py  test_cli.py  test_config.py  test_formatting.py  test_weather.py
tests/fixtures/: sample_forecast.json
weather_assistant/: __init__.py  __main__.py  advisor.py  briefing.py  calendar_loader.py  cli.py  config.py  formatting.py  models.py  weather.py
